--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "migrate": "node scripts/run_migrations.js",
+    "seed": "node scripts/seed.js",
     "test": "jest --runInBand --detectOpenHandles --forceExit"
   },
   "keywords": [],
